<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_simple_two"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mikescamell.sharedelementtransitions.simple_activity_to_activity.SimpleActivityB">

    <ImageView
        android:id="@+id/simple_activity_b_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/lion"
        android:contentDescription="@string/lion"
        android:transitionName="@string/simple_activity_transition"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/simple_activity_b_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:text="@string/lion_blurb" />

</LinearLayout>
